# failure_archive

./: .activity_log.md  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TEST_PLAN.md  add_details_keys.js  cliff.toml  description  docker-compose.yml  eslint.config.mjs  failure_archeive.pptx  knip.json  package-lock.json  package.json  patch_details.js  patch_i18n.js  pyproject.toml  tox.ini  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env  Dockerfile  README.md  failure_archive.db  main.py  pyproject.toml  requirements.txt  seed.py  tox.ini
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: analysis.py  failures.py  submissions.py
backend/tests/: conftest.py  test_analysis.py  test_failures.py  test_main.py  test_submissions.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  FRONTEND_DEPLOYMENT.md  SCREENSHOTS.md  USER_MANUAL.md  VERCEL_DEPLOYMENT_FRONTEND.md
frontend/: DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  eslint.config.mjs  package.json  vitest.config.ts
frontend/backend/: Dockerfile  requirements.txt
frontend/frontend/: package.json
messages/: en.json  hi.json  kn.json  ml.json  ta.json  te.json
specs/000-project-baseline/: plan.md  spec.md  tasks.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Navbar.tsx
src/i18n/: request.ts  routing.ts
src/lib/: api.ts  translations.ts
(+47 files in other folders)
