[project]
name = "failure-archive"
version = "1.0.0"
description = "An AI-powered forensic intelligence suite for analyzing and learning from business failures."
authors = [
    { name = "Hruday Hyaswin", email = "hruday@example.com" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "python-dotenv",
    "google-genai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "--cov=backend/app --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
source = ["backend/app"]
omit = ["*tests*", "*venv*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]

[tool.vulture]
min_confidence = 80
paths = ["backend"]
exclude = ["venv", ".venv"]
